# todo-api

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/versions/: 818be3785d56_create_tables.py
app/: main.py
app/api/: user.py
app/core/: database.py
app/crud/: user.py
app/models/: models.py
app/schemas/: user.py
app/services/: user.py
